[Cronet] Unregister NetLog observer during shutdown

This CL unregisters |write_to_file_observer_| and destroy it when
CronetUrlRequestContextAdapter is torn down if there is an observer.

R=kapishnikov@chromium.org
BUG=623701

Review-Url: https://codereview.chromium.org/2102903004
Cr-Commit-Position: refs/heads/master@{#402548}

Former-commit-id: 62fdf21f191556d3592f7d5cf69820d230792770